# pareto

./: .codedocs  .gitignore  404.html  CMakeLists.txt  ParetoConfig.cmake.in  ParetoFrontConfig.cmake.in  README.md  index.html  mkdocs.yml  sitemap.xml
bindings/: CMakeLists.txt  binding_n_dimensional.h  custom_equality.cpp  custom_equality.h  main.py  pyfront.cpp  tag_to_string.cpp  translation_unit.cpp.in
bindings/instantiation/: double_object_archive_instantiations.cpp  double_object_archive_kd_instantiations.cpp  double_object_archive_quad_instantiations.cpp  double_object_archive_r_instantiations.cpp  double_object_archive_r_star_instantiations.cpp  double_object_archive_vector_instantiations.cpp  double_object_front_instantiations.cpp  double_object_front_kd_instantiations.cpp  double_object_front_quad_instantiations.cpp  double_object_front_r_instantiations.cpp  double_object_front_r_star_instantiations.cpp  double_object_front_vector_instantiations.cpp  double_object_kd_tree_instantiations.cpp  double_object_quad_tree_instantiations.cpp  double_object_r_star_tree_instantiations.cpp  double_object_r_tree_instantiations.cpp  double_object_vector_tree_instantiations.cpp  double_point_instantiations.cpp  double_query_box_instantiations.cpp  python_instantiations.h
examples/: CMakeLists.txt  archive2d.cpp  archive2d.py  archive3d.cpp  archive3d.py  curse_sets.cpp  front2d.cpp  front2d.py  front3d.cpp  front3d.py  hvfront.py  main.cpp  matplotpp_example.cpp  spatial3d.cpp  spatial3d.py
pybindings/: CMakeLists.txt  pareto_python.cpp
source/: CMakeLists.txt
source/pareto/: archive.h  boost_tree.h  front.h  implicit_tree.h  kd_tree.h  point.h  predicates.h  quad_tree.h  query_box.h  r_star_tree.h  r_tree.h  spatial_map.h
source/pareto/common/: common.h  default_allocator.h  demangle.h  hypervolume.h  keywords.h  metaprogramming.h  operators.h  promote_to_floating_point.h
source/pareto/hv-2.0rc2/: Hypervolume_MEX.c  getrusage.c  io.c  io.h  main-hv.c
source/pareto/hv-2.0rc2/mk/: Darwin_i386_cc.mk  Darwin_i386_gcc-4.2.mk  Linux_x86_64_icc.mk  Linux_x86_64_pathcc.mk  Linux_x86_64_suncc.mk  README  gcc.mk  icc.mk  pgcc.mk  suncc.mk
source/pareto/matplot/: archive.h  front.h
source/pareto/memory/: free_memory_pool.h  interleaved_memory_pool.h  memory_pool.h
source/pareto/query/: disjoint.h  intersects.h  nearest.h  predicate_list.h  predicate_variant.h  predicates.h  query_box.h  satisfies.h  within.h
source/pareto/tree/: boost_tree.h  kd_tree.h  quad_tree.h  r_star_tree.h  r_tree.h  vector_tree.h
sources/: CMakeLists.txt  pareto_front.h
sources/pareto_front/: archive.h  common.h  front.h  memory_pool.h  pareto_front.h  point.h  predicates.h  query_box.h
sources/pareto_front/boost_subset/: aligned_storage.hpp  array.hpp  assert.hpp  blank.hpp  call_traits.hpp  checked_delete.hpp  concept_check.hpp  config.hpp  cstdint.hpp  function.hpp  get_pointer.hpp  integer.hpp  integer_fwd.hpp  integer_traits.hpp  lexical_cast.hpp  limits.hpp  mem_fn.hpp  next_prior.hpp  noncopyable.hpp  operators.hpp  range.hpp  rational.hpp  ref.hpp  scoped_ptr.hpp  static_assert.hpp  swap.hpp  throw_exception.hpp  token_functions.hpp  token_iterator.hpp  tokenizer.hpp  type_index.hpp  utility.hpp
sources/pareto_front/boost_subset/algorithm/: algorithm.hpp  apply_permutation.hpp  clamp.hpp  find_backward.hpp  find_not.hpp  gather.hpp  hex.hpp  is_palindrome.hpp  is_partitioned_until.hpp  minmax.hpp  sort_subrange.hpp  string.hpp  string_regex.hpp
sources/pareto_front/boost_subset/bind/: arg.hpp  bind.hpp  mem_fn.hpp  placeholders.hpp  protect.hpp  storage.hpp
sources/pareto_front/boost_subset/concept/: assert.hpp  requires.hpp  usage.hpp
sources/pareto_front/boost_subset/config/: abi_prefix.hpp  abi_suffix.hpp  auto_link.hpp  header_deprecated.hpp  pragma_message.hpp  requires_threads.hpp  workaround.hpp
sources/pareto_front/boost_subset/container/: adaptive_pool.hpp  allocator.hpp  allocator_traits.hpp  container_fwd.hpp  deque.hpp  flat_map.hpp  flat_set.hpp  list.hpp  map.hpp  new_allocator.hpp  node_allocator.hpp  node_handle.hpp  options.hpp  scoped_allocator.hpp  scoped_allocator_fwd.hpp  set.hpp  slist.hpp  small_vector.hpp  stable_vector.hpp  static_vector.hpp  string.hpp  throw_exception.hpp  uses_allocator.hpp  uses_allocator_fwd.hpp  vector.hpp
sources/pareto_front/boost_subset/container_hash/: extensions.hpp  hash.hpp  (+1 more)
sources/pareto_front/geometry/: geometry.hpp
sources/pareto_front/hv-2.0rc2/: Makefile  Makefile.lib  resource.h  svn_version  timer.c  timer.h
sources/pareto_front/tree/: boost_tree.h  kd_tree.h  quad_tree.h  r_star_tree.h  r_tree.h  vector_tree.h
tests/benchmarks/: CMakeLists.txt  benchmark_helpers.h  boxplots.m  containers_benchmark.cpp  data_structure_benchmark.cpp  hv_benchmark.cpp  hypervolume_benchmark.cpp  memory_resource_benchmark.cpp  monotonic_resource.cpp  monotonic_resource.h  plot_containers_benchmark.cpp  pmr_benchmark.cpp  tree_benchmark.cpp
tests/unit_tests/: CMakeLists.txt  archive.cpp  concepts.cpp  container_fuzz.cpp  front_fuzz.cpp  front_interface.cpp  fronts.cpp  memory.cpp  pmr_test.cpp  point.cpp  trees.cpp
tests/unit_tests/instantiation/: double_point_instantiations.cpp  double_query_box_instantiations.cpp  double_unsigned_archive_instantiations.cpp  double_unsigned_archive_kd_instantiations.cpp  double_unsigned_archive_quad_instantiations.cpp  double_unsigned_archive_r_instantiations.cpp  double_unsigned_archive_r_star_instantiations.cpp  double_unsigned_archive_vector_instantiations.cpp  double_unsigned_front_instantiations.cpp  double_unsigned_front_kd_instantiations.cpp  double_unsigned_front_quad_instantiations.cpp  double_unsigned_front_r_instantiations.cpp  double_unsigned_front_r_star_instantiations.cpp  double_unsigned_front_vector_instantiations.cpp  double_unsigned_kd_tree_instantiations.cpp  double_unsigned_quad_tree_instantiations.cpp  double_unsigned_r_star_tree_instantiations.cpp  double_unsigned_r_tree_instantiations.cpp  double_unsigned_vector_tree_instantiations.cpp  test_instantiations.h
(+3703 files in other folders)
